--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.example</groupId>
     <artifactId>jenkins-docker-test</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
